--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div id="app">
+    <div id="app" v-cloak>
       <h1>チュートリアルToDoリスト</h1>
 
       <label v-for="label in options">
